# auth-fastapi

./: .env  alembic.ini  auth_controller.py  auth_db.py  auth_model.py  auth_schema.py  config.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 35e0be631d09_add_token_column.py  b9d25169d815_first_revision.py
